@@ -9,6 +9,11 @@
 * Annotation `featureLogs` added to the pods to indicate if logs can be
   retrieved with `kubectl logs` ({188}).
 
+=== Changed
+* Restart setting in systemd units removed because the agent already
+  monitors the units and restarts them according to the restart policy
+  in the pod spec ({205}).
+
 === Fixed
 * Pods with restart policy `Never` handled correctly ({205}).
 
